--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "2.8.5",
     "dotenv": "16.4.4",
     "express": "4.18.2",
+    "nodemon": "3.0.3",
     "openai": "4.26.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
