--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "backend": "node index.js",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "axios": "1.6.7",
     "cors": "2.8.5",
     "dotenv": "16.4.4",
     "express": "4.18.2",
+    "next": "14.1.3",
     "nodemon": "3.0.3",
     "openai": "4.26.0",
     "react": "^18.2.0",
@@ -24,14 +23,7 @@
     "@types/express": "4.17.21",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "typescript": "^5.2.2"
   },
   "proxy": "http://localhost:3005"
 }
