--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "14.1.4",
     "axios": "1.6.7",
     "next": "14.1.3",
     "openai": "4.26.0",
