--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@next/third-parties": "14.1.4",
     "axios": "1.6.7",
+    "cheerio": "1.0.0-rc.12",
     "next": "14.1.3",
     "openai": "4.26.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/jsdom": "21.1.6",
     "@types/node": "^20",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
